<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_SettingBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="44dp"
        android:layout_marginStart="18dp"
        android:background="@drawable/back_button"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </Button>
    <TextView
        android:id="@+id/SettingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="40dp"
        android:text="@string/setting_title"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>
    <Button
        android:id="@+id/btn_SettingInfo"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:drawableEnd="@drawable/next_button"
        android:text="@string/setting_info"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAlignment="textStart"
        android:background="#00ff0000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_SettingBack">
    </Button>
    <Button
        android:id="@+id/btn_SettingPW"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableEnd="@drawable/next_button"
        android:text="@string/setting_pw_reset"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAlignment="textStart"
        android:background="#00ff0000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_SettingInfo">
    </Button>
    <Button
        android:id="@+id/btn_SettingCapsuleReset"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableEnd="@drawable/next_button"
        android:text="@string/setting_capsule_reset"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAlignment="textStart"
        android:background="#00ff0000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_SettingPW">
    </Button>
    <ImageView
        android:id="@+id/SettingDivision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:gravity="center"
        android:src="@drawable/division_line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_SettingCapsuleReset">
    </ImageView>
    <Button
        android:id="@+id/btn_SettingLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="31dp"
        android:text="@string/setting_logout"
        android:textSize="16sp"
        android:textColor="@color/cost"
        android:textStyle="bold"
        android:background="#00ff0000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SettingDivision">
    </Button>
    <Button
        android:id="@+id/btn_SettingWithdrawal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="5dp"
        android:text="@string/setting_withdrawal"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/cost"
        android:background="#00ff0000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_SettingLogout">
    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>