<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <Button
    android:id="@+id/ssBackButton"
    android:layout_width="24dp"
    android:layout_height="24dp"
    android:layout_marginStart="18dp"
    android:layout_marginTop="44dp"
    android:background="@drawable/back_button"
    app:backgroundTint="@null"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/ssTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="13sp"
    android:text="@string/sp_string_title"
    android:textColor="@color/black"
    android:textSize="22sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="@id/ssBackButton"
    app:layout_constraintStart_toEndOf="@id/ssBackButton"
    app:layout_constraintTop_toTopOf="@id/ssBackButton" />

  <ImageView
    android:id="@+id/ssIcon"
    android:layout_width="64dp"
    android:layout_height="64dp"
    android:src="@drawable/ic_success"
    android:layout_marginTop="162dp"
    app:layout_constraintTop_toBottomOf="@id/ssTitle"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

  <TextView
    android:id="@+id/ssMainMessage"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:textColor="@color/black"
    android:textSize="22sp"
    app:layout_constraintTop_toBottomOf="@id/ssIcon"
    android:layout_marginTop="27dp"
    android:text="@string/ss_main_message"/>
  
  <TextView
    android:id="@+id/ssSubMessage"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:text="@string/ss_sub_message"
    android:textColor="@color/secondary"
    android:layout_marginTop="16dp"
    android:textSize="12sp"
    app:layout_constraintTop_toBottomOf="@id/ssMainMessage"/>

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/ssSubmitButton"
    android:layout_width="0dp"
    android:layout_height="40dp"
    android:layout_marginStart="31dp"
    android:layout_marginTop="100dp"
    android:layout_marginEnd="32dp"
    android:layout_marginBottom="300dp"
    android:backgroundTint="@color/primary"
    android:background="@drawable/inactivate_button_background"
    android:text="@string/signup_submit_button_string"
    android:textColor="@color/black"
    android:textSize="14sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/ssSubMessage" />

</androidx.constraintlayout.widget.ConstraintLayout>