<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <Button
    android:id="@+id/spBackButton"
    android:layout_width="24dp"
    android:layout_height="24dp"
    android:layout_marginStart="18dp"
    android:layout_marginTop="44dp"
    android:background="@drawable/back_button"
    app:backgroundTint="@null"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/spTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="13sp"
    android:text="@string/sp_string_title"
    android:textColor="@color/black"
    android:textSize="22sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="@id/spBackButton"
    app:layout_constraintStart_toEndOf="@id/spBackButton"
    app:layout_constraintTop_toTopOf="@id/spBackButton" />

  <TextView
    android:id="@+id/spMainMessage"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="37dp"
    android:layout_marginTop="106dp"
    android:text="@string/sp_string_main_message"
    android:textColor="@color/black"
    android:textSize="22sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/spTitle" />

  <EditText
    android:id="@+id/spPasswordEditText"
    android:layout_width="250dp"
    android:layout_height="50dp"
    android:layout_marginStart="55dp"
    android:layout_marginTop="87dp"
    android:layout_marginEnd="55dp"
    android:backgroundTint="@color/secondary"
    android:inputType="textPassword"
    android:textColor="@color/black"
    android:gravity="center"
    android:textSize="22sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/spMainMessage" />


  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/spSubmitButton"
    android:layout_width="0dp"
    android:layout_height="40dp"
    android:layout_marginStart="31dp"
    android:layout_marginTop="100dp"
    android:layout_marginEnd="32dp"
    android:layout_marginBottom="300dp"
    android:background="@drawable/inactivate_button_background"
    android:backgroundTint="@color/cost"
    android:text="@string/signup_submit_button_string"
    android:textColor="@color/BG"
    android:textSize="14sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/spPasswordEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>